deleted scroll container

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -54,6 +54,7 @@
     letter-spacing: 2px;
     cursor: pointer;
     transition: 0.3s ease-in-out;
+    color: $black;
 
     &:hover {
       color: $text-color;
