--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -1,97 +1,100 @@
 $year-date-color: rgba(255, 255, 255, 0.6);
 $card-spacing: 4vw;
 
-.photo-albums-header {
-    letter-spacing: -1px;
-    font-size: 3rem;
-    font-weight: 500;
-}
+.photo-album-section {
+    margin-block: 50vh;
+    .photo-albums-header {
+        letter-spacing: -1px;
+        font-size: 3rem;
+        font-weight: 500;
+    }
 
-.photo-albums {
-    padding-block: 5em;
-    .container {
-        .album-card-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-column-gap: $card-spacing;
-            grid-row-gap: $card-spacing;
-            width: 100%;
+    .photo-albums {
+        padding-block: 5vh;
+        .container {
+            .album-card-grid {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-column-gap: $card-spacing;
+                grid-row-gap: $card-spacing;
+                width: 100%;
 
-            a {
-                text-decoration: none;
-                outline: none !important;
-            }
-
-            @media (max-width: $layout-breakpoint-small) {
-                grid-template-columns: repeat(1, 1fr);
-            }
-
-            .album-card {
-                .album-cover-container {
-                    aspect-ratio: 12/16;
-                    display: block;
-                    overflow: hidden;
-                    position: relative;
-
-                    &:hover {
-                        .dot {
-                            animation-name: dot-pulse;
-                            animation-timing-function: ease;
-                        }
-
-                        .album-cover {
-                            transform: scale(1.05);
-                        }
-                    }
-
-                    .album-cover-dot {
-                        mix-blend-mode: difference;
-                        position: absolute;
-                        right: 2em;
-                        top: 2em;
-                        z-index: 10;
-                        .dot {
-                            transition: 0.5s ease-in-out;
-                            color: $white;
-                            mix-blend-mode: difference;
-                            font-size: 2rem;
-                            animation-duration: 1.5s;
-                            animation-iteration-count: infinite;
-                        }
-                    }
-                    .image-container {
-                        transform: translateZ(1px);
-
-                        .album-cover {
-                            width: 100%;
-                            height: 100%;
-                            object-fit: cover;
-                            transition: 1s ease-in-out;
-                        }
-                    }
+                a {
+                    text-decoration: none;
+                    outline: none !important;
                 }
 
-                .album-card-cover-content {
-                    position: relative;
-                    margin-block: 3vh;
-                    width: 100%;
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                    text-decoration: none !important;
+                @media (max-width: $layout-breakpoint-small) {
+                    grid-template-columns: repeat(1, 1fr);
+                }
 
-                    .content-header {
-                        font-size: 0.7rem;
-                        color: $black;
-                        font-weight: 500;
-                        font-size: 2rem;
-                        text-decoration: none;
+                .album-card {
+                    .album-cover-container {
+                        aspect-ratio: 12/16;
+                        display: block;
+                        overflow: hidden;
+                        position: relative;
+
+                        &:hover {
+                            .dot {
+                                animation-name: dot-pulse;
+                                animation-timing-function: ease;
+                            }
+
+                            .album-cover {
+                                transform: scale(1.05);
+                            }
+                        }
+
+                        .album-cover-dot {
+                            mix-blend-mode: difference;
+                            position: absolute;
+                            right: 2em;
+                            top: 2em;
+                            z-index: 10;
+                            .dot {
+                                transition: 0.5s ease-in-out;
+                                color: $white;
+                                mix-blend-mode: difference;
+                                font-size: 2rem;
+                                animation-duration: 1.5s;
+                                animation-iteration-count: infinite;
+                            }
+                        }
+                        .image-container {
+                            transform: translateZ(1px);
+
+                            .album-cover {
+                                width: 100%;
+                                height: 100%;
+                                object-fit: cover;
+                                transition: 1s ease-in-out;
+                            }
+                        }
                     }
 
-                    .content-year-date {
-                        color: $text-color;
-                        font-size: 1.5rem;
-                        font-weight: 500;
+                    .album-card-cover-content {
+                        position: relative;
+                        margin-block: 3vh;
+                        width: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        text-decoration: none !important;
+
+                        .content-header {
+                            font-size: 0.7rem;
+                            color: $black;
+                            font-weight: 500;
+                            font-size: 2rem;
+                            text-decoration: none;
+                        }
+
+                        .content-year-date {
+                            color: $text-color;
+                            font-size: 1.5rem;
+                            font-weight: 500;
+                        }
                     }
                 }
             }
@@ -104,13 +107,13 @@ $card-spacing: 4vw;
         transform: scale(1);
     }
     25% {
-        transform: scale(1.30);
+        transform: scale(1.3);
     }
     50% {
         transform: scale(1.15);
     }
     75% {
-        transform: scale(1.30);
+        transform: scale(1.3);
     }
     100% {
         transform: scale(1);
