added read about me button

--- a/src/scss/components/_home-about.scss
+++ b/src/scss/components/_home-about.scss
@@ -28,16 +28,6 @@
               line-height: 1.4;
               overflow: hidden;
             }
-
-            //Line left to introduction
-            // &:before {
-            //   position: absolute;
-            //   content: "";
-            //   width: 3px;
-            //   height: 90%;
-            //   background: grey;
-            //   left: -40px;
-            // }
           }
 
           p {
@@ -48,84 +38,29 @@
             padding-right: 48px;
           }
 
-          .btn-row {
-            position: relative;
-            display: flex;
-
+          .read-about-button {
             a {
+              color: $black;
               text-decoration: none;
             }
 
-            &:before {
-              position: absolute;
-              content: "";
-              width: 56px;
-              height: 1px;
-              background: #dfdfdf;
-              top: 50%;
-              left: -68px;
-            }
-
-            button {
-              font-family: "Poppins";
-              text-decoration: none;
-              background: none;
-              border: none;
-              font-size: 1.34rem;
-              padding: 0;
-              cursor: pointer;
+            .read-about-link {
               text-transform: uppercase;
-              font-weight: 700;
-              letter-spacing: 1.5px;
-              display: flex;
-              align-items: center;
+              font-size: 1.5rem;
               position: relative;
-              transition: 0.3s ease-in-out;
 
-              &:hover {
-                color: $black-text-hover;
-
-                .arrow-icon {
-                  background-color: $black-text-hover;
-                  color: $white;
-                }
-              }
-
-              &:focus {
-                outline: none;
-              }
-
-              .arrow-icon {
-                color: $white;
+              &:before {
                 position: absolute;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                background: $forest-green;
-                height: 35px;
-                width: 35px;
-                border-radius: 50%;
-                margin-left: 8.5em;
-                left: 64px;
-                transform-origin: center center;
-                transition: 0.3s ease-in-out;
-
-                img {
-                  width: 60%;
-                }
-
-                &:hover {
-                  background-color: $black-text-hover;
-                }
+                content: "";
+                width: 56px;
+                height: 1px;
+                background: #dfdfdf;
+                top: 50%;
+                left: -80px;
               }
-            }
-
-            .button-divider {
-              color: $text-color;
-              font-weight: 700;
-              font-size: 1.4rem;
-              padding: 2px;
-              margin-inline: 1em;
+              
+              .arrow-icon {
+              }              
             }
           }
         }
@@ -162,4 +97,3 @@
     }
   }
 }
-
