--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -1,7 +1,7 @@
 $letter-spacing-banner-text: 42px;
 
 .banner {
-  // visibility: hidden;
+  visibility: hidden;
   background-color: $white;
   height: 100vh;
 
@@ -11,7 +11,7 @@ $letter-spacing-banner-text: 42px;
     position: relative;
     padding-inline: 100px;
     display: flex;
-    grid-column-gap: 50px;
+    grid-column-gap: 60px;
     grid-template-rows: repeat(3, 1fr);
 
     @media (max-width: 1440px) {
@@ -23,9 +23,30 @@ $letter-spacing-banner-text: 42px;
       display: grid;
       grid-template-rows: repeat(2, 1fr);
 
+      img:-moz-loading {
+        visibility: hidden;
+      }
+
+      &.left {
+        margin-block: 50px;
+      }
+
       &.middle {
         grid-template-rows: none !important;
       }
+
+      &.right {
+        margin-block: 50px;
+      }
+    }
+
+    .banner-images-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
 
       .banner-image {
         width: 100%;
@@ -35,51 +56,46 @@ $letter-spacing-banner-text: 42px;
       }
 
       .side-image {
-        width: 100%;
-        margin: auto;
+        position: absolute;
+        height: auto; /* Make sure images are scaled correctly. */
+        width: 100%; /* Adhere to container width. */
         display: block;
-
-        @media (max-width: 1440px) {
-          width: 90%;
-        }
-
-        &.left {
-          margin-top: 50px;
-        }
-
-        &.right {
-          margin-bottom: 50px;
-        }
+        flex-shrink: 0;
+        min-width: 100%;
+        min-height: 100%;
+        object-fit: cover;
       }
     }
   }
 }
 
-.scroll {
-  font-weight: 700;
-  font-size: 1.5rem;
-  letter-spacing: 2px;
-  color: $black;
-  text-transform: uppercase;
-  position: absolute;
-  bottom: 48px;
-  transition: 0.5s ease-in-out;
-  animation: bounce 2s infinite ease-in-out;
-}
+// .scroll {
+//   font-weight: 700;
+//   font-size: 1.5rem;
+//   letter-spacing: 2px;
+//   color: $black;
+//   text-transform: uppercase;
+//   position: absolute;
+//   bottom: 48px;
+//   transition: 0.5s ease-in-out;
+//   animation: bounce 2s infinite ease-in-out;
+// }
 
-@keyframes bounce {
-  0% {
-    transform: translateY(-5px)
-  }
-  50% {
-    transform: translateY(5px)
-  }
-  100% {
-    transform: translateY(-5px)
-  }
-}
+// @keyframes bounce {
+//   0% {
+//     transform: translateY(-5px);
+//   }
+//   50% {
+//     transform: translateY(5px);
+//   }
+//   100% {
+//     transform: translateY(-5px);
+//   }
+// }
 
 .banner-text {
+  overflow: hidden;
+  line-height: 1;
   font-size: 8rem;
   text-transform: uppercase;
   letter-spacing: 42px;
@@ -97,11 +113,4 @@ $letter-spacing-banner-text: 42px;
     font-size: 6rem;
     letter-spacing: 36px;
   }
-
-  .banner-marquee {
-    height: 100px;
-    overflow: hidden;
-  }
 }
-
-
