--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,8 @@
 @import "pages/portfolio";
 @import "pages/about";
 @import "pages/motion";
-@import "pages/photoAlbumsPage";
+@import "pages/photo-albums-page";
+@import "pages/page-not-found";
 
 //Components
 @import "components/navbar";
