--- a/src/scss/components/_home-about.scss
+++ b/src/scss/components/_home-about.scss
@@ -21,12 +21,16 @@
           h1 {
             position: relative;
             font-weight: 500;
-            font-size: 3.8rem;
+            font-size: calc(clamp(3rem, 7vw, 4em) * .875);
             margin-bottom: 24px;
             .home-about-content-line {
               margin: 0;
               line-height: 1.4;
               overflow: hidden;
+
+              .home-about-content-line-inner {
+                
+              }
             }
           }
 
