--- a/src/scss/pages/_photo-albums-page.scss
+++ b/src/scss/pages/_photo-albums-page.scss
@@ -7,6 +7,10 @@
                 grid-template-columns: repeat(2, 1fr);
                 width: 100%;
 
+                @media (max-width: $layout-breakpoint-small) {
+                    grid-template-columns: repeat(1, 1fr);
+                }
+
                 .album-facts {
                     .album-title {
                         font-weight: 700;
@@ -25,6 +29,10 @@
                         line-height: 1.5;
                         font-size: 1.8em;
                         color: $text-color;
+
+                        @media (max-width: $layout-breakpoint-small) {
+                            padding-top: 4em;
+                        }
                     }
                 }
             }
