--- a/src/scss/pages/_portfolio.scss
+++ b/src/scss/pages/_portfolio.scss
@@ -1,5 +1,5 @@
 .image-gallery {
-    visibility: hidden;
+    // visibility: hidden;
     .container {
         .image-category-tags {
             display: flex;
