--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,7 +25,7 @@
 @import "components/cursor";
 
 body {
-  background-color: $white;
+  background-color: $black;
   min-height: 100% !important;
   height: 100%;
   overflow-x: hidden;
@@ -49,13 +49,3 @@ main {
   }
 }
 
-.App {
-  ._12c4J {
-    mix-blend-mode: difference;
-
-    .custom-cursor {
-      circle {
-      }
-    }
-  }
-}
