scroll background change still working on every page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,7 @@
 @import "components/cursor";
 
 body {
+  background-color: $background;
   min-height: 100% !important;
   height: 100%;
   overflow-x: hidden;
