menu working, only need exit animation

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -17,4 +17,5 @@ $black-text-hover: rgb(107, 107, 107);
 
 //Global
 $wrapper-value: 15vw;
+$wrapper-value-breakpoint-small: 8vw;
 $divider-color: rgb(212, 212, 212);
