menu almost done, only styling changed needed

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -18,4 +18,5 @@ $black-text-hover: rgb(107, 107, 107);
 //Global
 $wrapper-value: 15vw;
 $wrapper-value-breakpoint-small: 8vw;
+$wrapper-value-menu: 7vw;
 $divider-color: rgb(212, 212, 212);
