--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -4,6 +4,8 @@ $letter-spacing-banner-text: 42px;
   visibility: hidden;
   background-color: transparent;
   height: 100vh;
+  display: flex;
+  align-items: center;
 
   .row {
     overflow: hidden;
@@ -84,7 +86,7 @@ $letter-spacing-banner-text: 42px;
   transform: translateY(-50%);
   text-align: center;
   mix-blend-mode: difference;
-  z-index: 8;
+  z-index: 2;
   @media (max-width: 1440px) {
     font-size: 6rem;
     letter-spacing: 36px;
