--- a/src/scss/components/_navbar-menu.scss
+++ b/src/scss/components/_navbar-menu.scss
@@ -3,18 +3,12 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: $black;
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 9;
-
-    //Wrapper
-    padding-inline: $wrapper-value;
-
-    @media (max-width: $layout-breakpoint-small) {
-        padding-inline: $wrapper-value-breakpoint-small;
-    }
+    background-color: rgb(27, 27, 27);
+    z-index: 99;
+    padding-inline: $wrapper-value-menu;
 
     .container {
         .nav {
@@ -23,35 +17,31 @@
 
             .navlink-container {
                 cursor: pointer;
-                padding-bottom: 5em;
+                padding-bottom: 3em;
                 .navlink {
                     display: block;
 
                     a {
                         color: $white;
                         text-decoration: none;
-                        font-size: 8rem;
+                        font-size: calc(clamp(5rem, 7vw, 7.5rem) * .875);
                         transition: 0.3s ease-in-out;
 
                         &:hover {
-                            color: rgb(121, 121, 121);
+                            color: rgb(121, 121, 121);                        
                         }
                     }
                 }
+            }
+        }
 
-                .navlink-description {
-                    display: none;
-                    font-size: 1.8rem;
-                    margin-block: 1.5em;
-                    color: $white;
-                }
+        .menu-email {
+            padding-block: 10vh;
 
-                &:hover {
-                    .navlink-description {
-                        display: block;
-                        position: absolute;
-                    }
-                }
+            a {
+                text-decoration: none;
+                font-size: 2.6rem;
+                color: $white;
             }
         }
     }
