--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -95,7 +95,7 @@
     transition: 0.3s ease-in-out;
 
     &:hover {
-      transform: scale(1.1)
+      background-color: #292929;
     }
 
     &.menu-open {
