--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,6 +1,6 @@
 .about {
     .container {
-        margin-block: 10vh;
+        padding-block: 15vh;
         .about-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
