--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -1,10 +1,11 @@
 .navbar {
-  position: fixed;
+  position: absolute;
   width: 100%;
   font-size: 1.8rem;
   height: 100px;
   display: flex;
   z-index: 100;
+  mix-blend-mode: difference;
 
   a {
     text-decoration: none;
@@ -19,23 +20,15 @@
   align-items: center;
   justify-content: space-between;
 
-  
-
   .logo {
     .placeholder-logo {
-      color: $black;
+      color: $white;
       letter-spacing: 1px;
       transition: 0.3s ease-in-out;
       font-weight: 700;
       text-transform: uppercase;
       font-size: 2.3rem;
-
       text-decoration: none;
-      mix-blend-mode: difference;
-
-      &.menu-open {
-        color: white;
-      }
 
       &a:hover,
       a:visited,
@@ -47,37 +40,9 @@
       @media (max-width: $layout-breakpoint-medium) {
         font-size: 1rem;
       }
-
-      // &:hover {
-      //   color: rgb(156, 156, 156);
-      // }
     }
   }
 }
-
-// .menu {
-//   padding-top: 20px;
-//   padding-right: 8vw;
-//   .menu-button {
-//     color: $black;
-//     border: none;
-//     outline: none;
-//     background-color: transparent;
-//     font-size: 1.5rem;
-//     font-family: inherit;
-//     font-weight: 700;
-//     text-transform: uppercase;
-//     letter-spacing: 2px;
-//     cursor: pointer;
-//     transition: 0.3s ease-in-out;
-//     mix-blend-mode: difference;
-//     top: 20px;
-
-//     &.active {
-//       color: $white;
-//     }
-//   }
-// }
 
 .menu {
   position: relative;
@@ -87,7 +52,7 @@
     width: clamp(3.5em, 5.5vw, 4em);
     height: clamp(3.5em, 5.5vw, 4em);
     border-radius: 50%;
-    background-color: $black;
+    background-color: $white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -98,10 +63,6 @@
       background-color: #292929;
     }
 
-    &.menu-open {
-      background-color: $white;
-    }
-
     &[disabled] {
       pointer-events: none;
     }
@@ -110,30 +71,73 @@
       position: absolute;
       justify-content: center;
       width: 40%;
-      height: 20%;
+      height: 12%;
 
-      .lines {
+      &::before {
+        content: "";
         position: absolute;
-        width: 100%;
+        top: 0;
         height: 1px;
-        background-color: $background;
-
-        &.menu-open {
-          background-color: $black;
-        }
-
-        &.line-1 {
-          top: 0;
-        }
-
-        &.line-2 {
-          top: 50%;
-        }
-
-        &.line-3 {
-          bottom: 0;
-        }
+        width: 100%;
+        background-color: $white;
+        mix-blend-mode: difference;
       }
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        height: 1px;
+        width: 100%;
+        background-color: $white;
+        mix-blend-mode: difference;
+      }
+
+      &.menu-open {
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          height: 1px;
+          width: 100%;
+          // background-color: $black;
+          mix-blend-mode: difference;
+        }
+  
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          height: 1px;
+          width: 100%;
+          // background-color: $black;
+          mix-blend-mode: difference;
+        }
+
+      }
+
+      // .lines {
+      //   position: absolute;
+      //   width: 100%;
+      //   height: 1px;
+      //   background-color: $background;
+
+      //   &.menu-open {
+      //     background-color: $black;
+      //   }
+
+      //   &.line-1 {
+      //     top: 0;
+      //   }
+
+      //   &.line-2 {
+      //     top: 50%;
+      //   }
+
+      //   &.line-3 {
+      //     bottom: 0;
+      //   }
+      // }
     }
   }
 }
