--- a/src/scss/components/_navbar-menu.scss
+++ b/src/scss/components/_navbar-menu.scss
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
     background-color: rgb(27, 27, 27);
     z-index: 99;
     padding-inline: $wrapper-value-menu;
@@ -31,10 +31,15 @@
                             content: "\2022";
                             position: absolute;
                             margin-left: -50px;
+
+                            @media (max-width: $layout-breakpoint-small) {
+                                margin-left: -25px;
+                            }
                         }
 
                         &:hover {
-                            color: rgb(121, 121, 121);                        
+                            margin-left: 10px;
+                            color: rgb(121, 121, 121);                    
                         }
                     }
 
