--- a/src/scss/components/_home-about.scss
+++ b/src/scss/components/_home-about.scss
@@ -1,6 +1,10 @@
 .home-about {
   visibility: hidden;
   margin-block: 10vh;
+
+  &.responsive {
+    display: none;
+  }
   .container {
     margin: 0 auto;
 
@@ -21,7 +25,7 @@
           h1 {
             position: relative;
             font-weight: 500;
-            font-size: calc(clamp(3rem, 7vw, 4em) * .875);
+            font-size: calc(clamp(3rem, 7vw, 4em) * 0.875);
             margin-bottom: 24px;
             .home-about-content-line {
               margin: 0;
@@ -29,7 +33,6 @@
               overflow: hidden;
 
               .home-about-content-line-inner {
-                
               }
             }
           }
@@ -62,9 +65,9 @@
                 top: 50%;
                 left: -80px;
               }
-              
+
               .arrow-icon {
-              }              
+              }
             }
           }
         }
