--- a/src/scss/components/_navbar-menu.scss
+++ b/src/scss/components/_navbar-menu.scss
@@ -5,15 +5,19 @@
     left: 0;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     background-color: rgb(27, 27, 27);
     z-index: 99;
-    padding-inline: $wrapper-value-menu;
 
     .container {
+        padding-inline: $wrapper-value-menu;
         .nav {
             padding-top: 27vh;
             text-align: left;
+
+            @media (max-width: $layout-breakpoint-small) {
+                padding-top: 18vh;
+            }
 
             .navlink-container {
                 cursor: pointer;
@@ -24,36 +28,85 @@
                     a {
                         color: $white;
                         text-decoration: none;
-                        font-size: calc(clamp(5rem, 7vw, 7.5rem) * .875);
+                        font-size: calc(clamp(5rem, 7vw, 7.5rem) * 0.875);
                         transition: 0.3s ease-in-out;
 
                         &.active::before {
                             content: "\2022";
                             position: absolute;
-                            margin-left: -50px;
+                            margin-left: -35px;
 
                             @media (max-width: $layout-breakpoint-small) {
-                                margin-left: -25px;
+                                right: 8vw;
                             }
                         }
 
                         &:hover {
                             margin-left: 10px;
-                            color: rgb(121, 121, 121);                    
+                            color: rgb(121, 121, 121);
                         }
                     }
-
                 }
             }
         }
 
-        .menu-email {
-            padding-block: 10vh;
+        .menu-footer-divider {
+            border: none !important;
+            width: 100%;
+            height: 1px;
+            background-color: $divider-color;
 
-            a {
-                text-decoration: none;
-                font-size: 2.6rem;
-                color: $white;
+            @media (min-width: $layout-breakpoint-small) {
+                display: none;
+            }
+        }
+
+        .menu-footer {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding-block: 15vh;
+
+            @media (max-width: $layout-breakpoint-small) {
+                padding-block: 5vh;
+                display: grid;
+                grid-template-rows: repeat(1, 1fr);
+            }
+
+            .footer-email {
+                a {
+                    text-decoration: none;
+                    font-size: 3rem;
+                    color: $white;
+
+                    @media (max-width: $layout-breakpoint-small) {
+                        font-size: 1.8rem;
+                    }
+                }
+            }
+
+            .footer-socials {
+                display: flex;
+
+                .social-icon {
+                    transition: 0.3s ease-in-out;
+                    font-size: calc(clamp(1.6rem, 7vw, 2.5rem) * 0.875);
+                    color: $white;
+                    padding-inline: .8em;
+
+                    @media (max-width: $layout-breakpoint-small) {
+                        padding-top: 5vh;
+                    }
+
+                    &:first-child {
+                        padding-left: 0px !important;
+                    }
+
+                    &:hover {
+                        color: rgb(199, 199, 199);
+                    }
+                }
             }
         }
     }
