--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,6 +1,6 @@
 .about {
+    padding-block: $padding-top-global + 5;
     .container {
-        padding-block: 15vh;
         .about-grid {
             width: 100%;
             display: grid;
